--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.rom.rm.musictown">
-    //sử dụng quyền này để cho trình phát nhạc tiếp tục khi thiết bị của người dùng chuyển sang chế
-    độ idle. Manifest
+    <!--sử dụng quyền này để cho trình phát nhạc tiếp tục khi thiết bị của người dùng chuyển sang chế độ idle. Manifest-->
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
@@ -39,6 +39,8 @@
         <activity android:name=".activity.PlayMusic" />
         <activity android:name=".activity.UserActivity" />
         <activity android:name=".activity.AddSongtoPlaylist"/>
+        <activity android:name=".activity.PlaySongOnline"/>
+        <activity android:name=".activity.SearchFragment"/>
     </application>
 
 </manifest>
